RESOLVED FIXED219410
REGRESSION: [iOS] imported/w3c/web-platform-tests/css/css-ui/appearance-revert-001.tentative.html is a flaky image failure
https://bugs.webkit.org/show_bug.cgi?id=219410
Summary REGRESSION: [iOS] imported/w3c/web-platform-tests/css/css-ui/appearance-rever...
Ryan Haddad
Reported 2020-12-01 14:44:48 PST
Attachments
Patch (3.61 KB, patch)
2020-12-01 16:08 PST, Aditya Keerthi
no flags
Radar WebKit Bug Importer
Comment 1 2020-12-01 14:45:04 PST
Ryan Haddad
Comment 2 2020-12-01 14:46:22 PST
The first failure on the dashboard appears at r270066, but the cause is probably https://trac.webkit.org/changeset/270065/webkit
Aditya Keerthi
Comment 3 2020-12-01 16:08:08 PST
EWS
Comment 4 2020-12-02 07:46:47 PST
Committed r270346: <https://trac.webkit.org/changeset/270346> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415175 [details].
Note You need to log in before you can comment on or make changes to this bug.