REGRESSION: [iOS] imported/w3c/web-platform-tests/css/css-ui/appearance-revert-001.tentative.html is a flaky image failure https://bugs.webkit.org/show_bug.cgi?id=219410 <rdar://problem/71868276>

Reviewed by Wenson Hsieh.

The flaky failure started appearing after r270065, which introduced a
new look for progress bars when the iOSFormControlRefresh setting is
enabled. Animated indeterminate progress bars were added as part of the
new appearance.

However, since the setting is disabled by default, there should have
been no effect on existing tests. r270065 omitted an early return in
RenderThemeIOS::animationRepeatIntervalForProgressBar, which would
lead to the existing progress bar being repainted 30 times per second.
This repainting is the likely cause of the flaky image failure.

Furthermore, this test uses a determinate progress bar, so repainting
due to animation should never occur, regardless of whether or not the
iOSFormControlRefresh setting is enabled. To fix the incorrect behavior,
a change was made to RenderProgress::updateAnimationState.

* rendering/RenderProgress.cpp:
(WebCore::RenderProgress::updateAnimationState):

Only indeterminate progress bars have an animation.

* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::animationRepeatIntervalForProgressBar const):

Use the original value if the iOSFormControlRefresh setting is disabled.


Canonical link: https://commits.webkit.org/232037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270346 268f45cc-cd09-0410-ab3c-d52691b4dbfc